<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_payment_details">

    <Button
        android:id="@+id/btnH"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:background="@drawable/home"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnA"
        app:layout_constraintEnd_toStartOf="@+id/btnA"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnA"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/attendace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnP"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnH"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/btnP"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:background="@drawable/pay"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnA"
        app:layout_constraintEnd_toStartOf="@+id/btnN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnA" />

    <Button
        android:id="@+id/btnN"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:background="@drawable/noticesicon"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnP"
        app:layout_constraintEnd_toStartOf="@+id/btnpf"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnP" />

    <Button
        android:id="@+id/btnpf"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:background="@drawable/profile"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnN" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="?attr/actionModeCloseDrawable"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorAccent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="157dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/payment"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toEndOf="@+id/btnback"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/add_payment_details" />

        <EditText
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:id="@+id/EtpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name" />

        <EditText
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:id="@+id/EtpSID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/student_id" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BtnpDate"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:text="@string/date"
                android:textSize="30sp" />

            <TextView
                android:textAlignment="center"
                android:textSize="30sp"
                android:id="@+id/TvpDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/press_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/SpinPsub"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="2" />

            <Button
                android:onClick="displaySubList"
                android:id="@+id/BpSub"
                style="@android:style/Widget.Button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:text="@string/ok" />

            <Spinner
                android:id="@+id/SpinPfee"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="2" />

            <Button
                android:onClick="displayFeeList"
                android:id="@+id/BpFee"
                style="@android:style/Widget.Button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:text="@string/ok" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TvpSub"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/TvpFee"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:onClick="save"
                android:id="@+id/BPSave"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textSize="24sp" />

            <Button
                android:id="@+id/BpView"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update"
                android:textSize="24sp" />

            <Button
                android:id="@+id/BpUpdate"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view"
                android:textSize="24sp" />

            <Button
                android:id="@+id/BpDelete"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>