<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Attendance">

    <Button
        android:id="@+id/btnH"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:background="@drawable/home"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnA"
        app:layout_constraintEnd_toStartOf="@+id/btnA"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnA"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/attendace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnP"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnH"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/btnP"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:background="@drawable/pay"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnA"
        app:layout_constraintEnd_toStartOf="@+id/btnN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnA" />

    <Button
        android:id="@+id/btnN"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:background="@drawable/noticesicon"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnP"
        app:layout_constraintEnd_toStartOf="@+id/btnpf"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnP" />

    <Button
        android:id="@+id/btnpf"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:background="@drawable/profile"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnN" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="?attr/actionModeCloseDrawable"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/headerView"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/headerView"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorAccent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/attendance"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toEndOf="@+id/btnback"
        app:layout_constraintTop_toTopOf="@+id/headerView" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/LLmain"
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:layout_marginTop="96dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView"
        app:layout_constraintVertical_bias="1.0">


        <TextView

            android:layout_marginRight="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="50dp"
            android:id="@+id/TvStdID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_id"
            android:textSize="25sp" />

        <EditText
            android:textSize="30sp"
            android:layout_marginRight="75dp"
            android:layout_marginLeft="75dp"
            android:id="@+id/EtStdID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/student_id"/>

        <TextView
            android:layout_marginRight="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:id="@+id/TvSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject" />

        <Spinner

            android:layout_marginRight="75dp"
            android:layout_marginLeft="75dp"
            android:id="@+id/Spin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/icalender" />

            <Button
                android:id="@+id/BtnDate"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="75dp"
                android:text="@string/date"
                android:textSize="25sp" />



        </LinearLayout>

        <TextView
            android:id="@+id/TvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:text="@string/press_date"
            android:textSize="30sp" />

        <Button
            android:id="@+id/BtnSubmit"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="75dp"
            android:text="@string/submit"
            android:textSize="25sp" />

        <TextView
            android:textAlignment="center"
            android:layout_marginTop="25sp"
            android:textSize="25sp"
            android:id="@+id/TvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>